# course_work

./: .env_template  README.md  decorators_log  loggers_info.txt  main.py  pyproject.toml  user_settings.json
src/: decorators.py  decorators_log  loggers_info.txt  main.py  reports.py  services.py  test.py  user_settings.json  utils.py  views.py
tests/: decorators_log  loggers_info.txt  test_reports.py  test_services.py  test_utils.py  test_views.py  user_settings.json
